hello-world/hello-world-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  generation: 1
  labels:
    app: hello-world
  name: hello-world
spec:
  replicas: 1
  selector:
    app: hello-world
    deploymentconfig: hello-world
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      creationTimestamp: null
      labels:
        app: hello-world
        deploymentconfig: hello-world
    spec:
      containers:
      - env:
          - name: http_proxy
          - name: https_proxy
          - name: HTTP_PROXY
          - name: HTTPS_PROXY
        image: hello-world:latest
        imagePullPolicy: Always
        name: hello-world
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 1G
          requests:
            cpu: 500m
            memory: 1G
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - hello-world
      from:
        kind: ImageStreamTag
        name: hello-world:latest
        namespace: myproject
    type: ImageChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
