hello-world/hello-world-svc.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: null
  labels:
    app: hello-world
  name: hello-world
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8090-tcp
    port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    deploymentconfig: hello-world
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
