hello-world/hello-world-route.yml
apiVersion: v1
kind: Route
metadata:
  name: hello-world
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: hello-world
